# nvim-config

./: .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  init.lua  lazy-lock.json
lua/config/: autocmds.lua  options.lua
lua/core/: lazy.lua
lua/plugins/: 99.lua  _init.lua  additional-themes.lua  bufferline.lua  claude-code.lua  cmp.lua  conform.lua  dap.lua  github-theme.lua  helm.lua  indent-blankline.lua  lsp.lua  lualine.lua  mason-tool-installer.lua  neo-tree.lua  noice.lua  nvim-lint.lua  nvim-ros2.lua  persistence.lua  render-markdown.lua  snacks.lua  telescope.lua  todo-comments.lua  tokyonight.lua  treesitter.lua  trouble.lua  vim-sleuth.lua  vim-tmux-navigator.lua  whichkey.lua
lua/util/: swap_handler.lua
tests/: test_swap_handler.lua
